--- a/descriptor.yaml
+++ b/descriptor.yaml
@@ -1,6 +1,6 @@
-code: list-content-widget
-description: strapi list content bundle
+code: single-content-widget
+description: strapi single content bundle
 components:
   widgets:
-    - ui/widgets/widgets-dir/et-widget/et-widget-descriptor.yaml
+    - ui/widgets/widgets-dir/et-widget/et-single-widget-descriptor.yaml
 
