--- a/ui/widgets/widgets-dir/et-widget/et-single-widget-descriptor.yaml
+++ b/ui/widgets/widgets-dir/et-widget/et-single-widget-descriptor.yaml
@@ -7,7 +7,5 @@ customUiPath: et-single-widget.ftl
 configUi:
   customElement: single-content-widget-config # CHANGE-IT The name of the custom-element used to render the configUI
   resources: # CHANGE-IT the file containing the config screen built artefacts
-    - single-content-widget/static/js/2.8bf69aa8.chunk.js
-    - single-content-widget/static/js/main.e7584d88.chunk.js
-    - single-content-widget/static/js/runtime-main.9487466f.js
-    - single-content-widget/static/css/main.1c783cfb.chunk.css
+    - single-content-widget/static/js/react-scw-config-0.0.1.js
+    - single-content-widget/static/css/main.1c783cfb.css
